# tspw-graph

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/app/: main.py  settings.py
apps/api/src/app/extraction/: __init__.py  azure_openai.py  fixed.py  models.py  normalize.py  ollama.py  openai_compatible.py  pipeline.py  providers.py  splitter.py
apps/api/src/app/graph/: models.py  neo4j.py  repository.py  router.py  service.py
apps/api/src/app/jobs/: __init__.py  models.py  repository.py  router.py  service.py
apps/api/src/app/ontology/: catalog.py  models.py  router.py
apps/api/src/app/projects/: repository.py  router.py  service.py
apps/api/src/app/qa/: models.py  router.py  service.py  templates.py
apps/api/src/app/review/: graph.py  router.py  service.py
apps/api/src/app/worker/: __init__.py  main.py  online.py  runner.py
apps/api/tests/extraction/: test_model_smoke.py  test_normalize.py  test_pipeline.py  test_provider_contracts.py  test_providers.py  test_splitter.py
apps/api/tests/graph/: test_live_api.py  test_review_filters.py  test_router.py  test_service.py
apps/api/tests/jobs/: test_quality.py  test_repository.py  test_router.py
apps/api/tests/ontology/: test_catalog.py
apps/api/tests/projects/: test_repository.py  test_router.py  test_service.py
apps/api/tests/qa/: test_live_api.py  test_review_filters.py  test_service.py
apps/api/tests/review/: test_router.py  test_service_facts.py
apps/api/tests/worker/: test_runner.py
apps/web/: index.html  (+5 more)
(+40 files in other folders)
